--- a/clicker_frontend/src/styles/Shop.module.css
+++ b/clicker_frontend/src/styles/Shop.module.css
@@ -1,6 +1,6 @@
-.button_rank {
+.button_shop {
     position: absolute;
-    background-image: url("src/assets/Button_Rank.png");
+    background-image: url("src/assets/Button_Shop.png");
     background-color: transparent;
     background-position: center center;
     background-size: 100% 100%;
@@ -12,7 +12,7 @@
     transition-duration: .4s;
 }
 
-.button_rank:hover {
+.button_shop:hover {
     transform: scale(.28);
     cursor: pointer;
 }
